Bruker samme logikk for om det er søkt ytelse for andel/periode (#565)
* Bruker samme logikk for om det er søkt ytelse for andel/periode

* Legger til tester

* Fjerner ubrukte metoder